src/objects/Insight_Header_Trailer__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <label>Batch Date</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <label>Company ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Records__c</fullName>
        <label>No of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Code__c</fullName>
        <label>Record Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Insight Header Trailer</label>
    <nameField>
        <displayFormat>IH-{000000}</displayFormat>
        <label>Insight_Header__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Header Trailer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>